hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hello-world
  name: hello-world
spec:
  ports:
    - port: 8080
  selector:
    app.kubernetes.io/name: hello-world
  type: NodePort
